# orcas

./: CMakeLists.txt  README.md
core/: CMakeLists.txt
core/inc/: encode.hpp  utils.hpp
core/src/: encode.cpp  utils.cpp  welcome.cpp
